  input and VDR is no longer killed by the watchdog during import

2005-04-19: Version 0.1.7-BETA
- Removed option -g. muggle now automatically does the right thing:
  GD compatibility mode is used when importing files [0-9][0-9]/filename
  relative to the toplevel directory where filename contains no /
- External command find is no longer needed
- Better error handling for unreadable files when playing
- Changed several includes from <vdr/X.h> to <X.h>
- Elected a new pope
- Makefile respects preset values for directories
- Debug messages now go into /var/log/debug. Up to now it was stderr.
- Playlist view: after pressing arrow up, playing looped backwards.
  Now it always goes forward.
- Play mode: in endless mode (all tracks), trying to go back on the
  first track restarted the first track. Now it goes to the last track.
- Added incremental search

xxxxxxxx: Version 0.1.8-BETA
- WARNING: muggle currently only works correctly with LD_ASSUME_KERNEL=2.4.1.
  Since 1.3.27 vdr does not enforce this anymore
- reimplemented mugglei option -z (DeleteStaleReferences), also in the
  muggle setup menu
- rewrote most of the SQL interface to allow easier implementation
  of alternative data bases backends or alternative data source like EPG
- major edits to README - split off README.mysql
- implemented support for SQLite. Tested with version 3.2.1. The
  field genre2 is not supported because it would be too slow.
  Define HAVE_SQLITE in Make.config, details see README.mysql
  Parameters h,u,s,p,w are not needed and not supported with SQLite.
- implemented support for Postgresql. Tested with version 8.0. 
  Define HAVE_PG in Make.config, details see README.postgresql
- if instant play is used while playing from the 'play' collection,
  the latter will be resumed after instant play finishes.
- if you use an order like Interpret/Album/Tracks and all songs
  have the same track number, instantly playing any of them played
  them all. Fixed